--- a/index.html
+++ b/index.html
@@ -46,31 +46,31 @@
             <div class="productbox">
                 <img src="image/undraw_shopping_app_flsj.svg" alt="">
                 <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <a href="#">$63.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_shopping_app_flsj.svg" alt="">
                 <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <a href="#">$93.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_shopping_app_flsj.svg" alt="">
                 <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <a href="#">$123.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_shopping_app_flsj.svg" alt="">
                 <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <a href="#">$213.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_shopping_app_flsj.svg" alt="">
                 <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <a href="#">$223.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
         </div>
@@ -93,37 +93,37 @@
             <div class="productbox">
                 <img src="image/undraw_watch_application_uhc9.svg" alt="">
                 <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <a href="#">$13.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_in_no_time_6igu.svg" alt="">
-                <p>Black Genuine Leather Bags</p>
+                <p>Green Genuine Leather Bags</p>
                 <a href="#">$23.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_smartwatch_74tv.svg" alt="">
-                <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <p>Blarry Genuine Leather Bags</p>
+                <a href="#">$33.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_watch_application_uhc9.svg" alt="">
-                <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <p>Blue Genuine Leather Bags</p>
+                <a href="#">$43.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_in_no_time_6igu.svg" alt="">
-                <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <p>Yellow Genuine Leather Bags</p>
+                <a href="#">$53.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
             <div class="productbox">
                 <img src="image/undraw_smartwatch_74tv.svg" alt="">
-                <p>Black Genuine Leather Bags</p>
-                <a href="#">$23.3</a>
+                <p>Red Genuine Leather Bags</p>
+                <a href="#">$63.3</a>
                 <a href="" class="buybtn">Add to Cart</a>
             </div>
              
